ALB-Ingress/02-Nginx-App1-Deployment-and-NodePortService.yml
# defining namespace is optional here. you can remove it if you want to. Then it create deploy and service in default namespace.
---
apiVersion: v1
kind: Namespace
metadata:
  name: sudip-deploy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sudip-deploy
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          image: stacksimplify/kube-nginxapp1:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sudip-deploy
  name: app1-nginx-nodeport-service
  labels:
    app: app1-nginx
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
#    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
